--- a/weather.css
+++ b/weather.css
@@ -41,6 +41,9 @@ button {
   color: #ffffff;
   margin-left: 2px;
 }
+p {
+  margin-left: 256px;
+}
 .temp-number,
 .city {
   font-size: 60px;
@@ -72,7 +75,7 @@ button {
   height: 625px;
   background: #e9ebee;
   border-radius: 20px;
-  margin: 100px auto;
+  margin: 100px auto 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
   line-height: 1;
