--- a/weather.css
+++ b/weather.css
@@ -1,3 +1,6 @@
+body {
+  font-family: Poppins;
+}
 img {
   width: 80px;
 }
@@ -44,6 +47,17 @@ button {
 p {
   margin-left: 256px;
 }
+ul {
+  list-style: none;
+}
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+a {
+  padding: 8px;
+}
 .temp-number,
 .city {
   font-weight: 400;
@@ -53,15 +67,17 @@ p {
 }
 .temp-number {
   color: #ff934f;
-  font-size: 80px;
-  line-height: 1;
+  font-size: 84px;
+  line-height: 0.82;
 }
 .city {
   color: #5a6276;
-  font-size: 60px;
+  font-size: 64px;
+  line-height: 0.7;
+  margin-bottom: 20px;
 }
 .temp-cf {
-  color: #5a6276;
+  color: #ffffff;
   font-size: 14px;
 }
 .weather-details {
@@ -69,6 +85,7 @@ p {
   font-weight: normal;
   color: #5a6276;
   margin: 0;
+  line-height: 1.3;
 }
 .container {
   width: 1000px;
@@ -109,4 +126,8 @@ p {
   margin: 0;
   padding: 0;
   text-align: center;
+}
+.current-weather {
+  margin: 0;
+  padding: 0;
 }
