--- a/weather.css
+++ b/weather.css
@@ -62,8 +62,6 @@ a {
 .city {
   font-weight: 400;
   margin: 0;
-
-  line-height: 1;
 }
 .temp-number {
   color: #ff934f;
@@ -84,7 +82,8 @@ a {
   font-size: 16px;
   font-weight: normal;
   color: #5a6276;
-  margin: 0;
+  margin: 0 35px;
+  padding: 0;
   line-height: 1.3;
 }
 .container {
