--- a/weather.css
+++ b/weather.css
@@ -45,7 +45,12 @@ button {
   margin-left: 2px;
 }
 p {
-  margin-left: 256px;
+  margin: 0;
+  padding: 0;
+}
+.bottom-link {
+  margin: 0;
+  padding: 0;
 }
 ul {
   list-style: none;
@@ -86,6 +91,10 @@ a {
   margin: 0 35px;
   padding: 0;
   line-height: 1.3;
+}
+.project {
+  margin: 0 auto;
+  width: 1000px;
 }
 .container {
   width: 1000px;
