--- a/weather.css
+++ b/weather.css
@@ -113,11 +113,7 @@ a {
 .container-content {
   padding: 30px 54px;
 }
-@media (min-width: 576px) {
-  .container {
-    max-width: 100%;
-  }
-}
+
 .forecast-day {
   color: #5a6276;
   font-size: 24px;
@@ -183,4 +179,112 @@ a {
 .col-4 {
   margin: 0;
   padding: 0;
+}
+
+@media (max-width: 720px) {
+  .container {
+    width: 320px;
+    height: 568px;
+    background: #e9ebee;
+    border-radius: 20px;
+    margin: 0 auto;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    line-height: 1;
+  }
+  .project {
+    margin: 0 auto;
+    width: 320px;
+  }
+  .container-content {
+    padding: 25px 10px;
+  }
+  form {
+    margin: 0;
+    padding: 0;
+  }
+  input[type="text"] {
+    border-radius: 8px;
+    border: 1px solid #fff;
+    width: 300px;
+    height: 40px;
+    font-size: 18px;
+    padding: 5px;
+    margin: 0;
+    outline: none;
+  }
+
+  input::placeholder {
+    color: #a7a9ad;
+    font-size: 18px;
+  }
+  input[type="submit"] {
+    border-radius: 8px;
+    background-color: #ff934f;
+    border: 1px solid #ff934f;
+    width: 146px;
+    height: 40px;
+    font-size: 18px;
+    color: #ffffff;
+    margin: 8px 3px 0 0;
+    padding: 0;
+  }
+  button {
+    border-radius: 8px;
+    background-color: #5a6276;
+    border: 1px solid #5a6276;
+    width: 146px;
+    height: 40px;
+    font-size: 16px;
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+  }
+  .forecast-day {
+    color: #5a6276;
+    font-size: 16px;
+    text-align: center;
+  }
+  .col-2 {
+    margin: 0;
+    padding: 0;
+  }
+  .forecast-temp {
+    font-size: 14px;
+    text-align: center;
+  }
+  .col-2 img {
+    margin: auto;
+    padding: 0;
+    display: block;
+    width: 30px;
+  }
+  .weather-details {
+    font-size: 12px;
+    font-weight: normal;
+    color: #5a6276;
+    margin: 0;
+    padding: 0;
+    line-height: 1.3;
+    text-align: center;
+    position: relative;
+    right: 30px;
+    top: 100px;
+  }
+  .top-img {
+    width: 80%;
+    margin: auto;
+    padding: 0;
+    display: block;
+    position: relative;
+    left: 30px;
+    top: 110px;
+  }
+  .row {
+    margin: 0;
+  }
+  .bottom {
+    position: relative;
+    top: 110px;
+  }
 }
