--- a/weather.css
+++ b/weather.css
@@ -180,7 +180,11 @@ a {
   margin: 0;
   padding: 0;
 }
-
+@media (min-width: 576px) {
+  .container {
+    max-width: 100%;
+  }
+}
 @media (max-width: 720px) {
   .container {
     width: 320px;
@@ -278,7 +282,7 @@ a {
     display: block;
     position: relative;
     left: 30px;
-    top: 110px;
+    top: 100px;
   }
   .row {
     margin: 0;
@@ -286,5 +290,10 @@ a {
   .bottom {
     position: relative;
     top: 110px;
+  }
+  h1 {
+    margin: 30px 0;
+    padding: 0;
+    font-size: 44px;
   }
 }
