--- a/weather.css
+++ b/weather.css
@@ -252,19 +252,24 @@ a {
   .col-2 {
     margin: 0;
     padding: 0;
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+  .col-2:last-child {
+    display: none;
   }
   .forecast-temp {
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
   }
   .col-2 img {
-    margin: auto;
+    margin: 6px auto;
     padding: 0;
     display: block;
-    width: 30px;
+    width: 40px;
   }
   .weather-details {
-    font-size: 12px;
+    font-size: 16px;
     font-weight: normal;
     color: #5a6276;
     margin: 0;
@@ -272,8 +277,8 @@ a {
     line-height: 1.3;
     text-align: center;
     position: relative;
-    right: 30px;
-    top: 100px;
+    left: 150px;
+    top: 10px;
   }
   .top-img {
     width: 80%;
@@ -281,19 +286,31 @@ a {
     padding: 0;
     display: block;
     position: relative;
-    left: 30px;
-    top: 100px;
+    top: 110px;
   }
   .row {
     margin: 0;
   }
-  .bottom {
-    position: relative;
-    top: 110px;
-  }
+
   h1 {
     margin: 30px 0;
     padding: 0;
     font-size: 40px;
+  }
+  .col-4 {
+    margin: 0;
+    padding: 0;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .temperature {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    right: 70px;
+  }
+  .middle {
+    padding: 0 0 50px;
   }
 }
