--- a/weather.css
+++ b/weather.css
@@ -139,12 +139,17 @@ a {
   margin: 0;
 }
 .top-img {
-  width: 70%;
+  width: 60%;
   margin: auto;
   padding: 0;
   display: block;
 }
-
+.parent-top-img {
+  margin: auto;
+  padding: 0;
+  display: inline;
+  vertical-align: middle;
+}
 .bottom {
   padding: 0;
   margin: 0;
@@ -177,7 +182,6 @@ a {
 }
 
 .col-4 {
-  margin: 0;
   padding: 0;
 }
 @media (min-width: 576px) {
@@ -288,6 +292,7 @@ a {
     position: relative;
     top: 110px;
   }
+
   .row {
     margin: 0;
   }
