--- a/weather.css
+++ b/weather.css
@@ -181,7 +181,7 @@ a {
   text-decoration: none;
 }
 
-.col-4 {
+.col-sm-4 {
   padding: 0;
 }
 
@@ -292,12 +292,17 @@ For another screens
     padding: 0;
     display: block;
   }
-  .col-4 {
+  .col-6 {
     margin: 0;
     padding: 0;
     flex: 0 0 50%;
     max-width: 50%;
   }
+  .col-12 {
+    margin: 0;
+    padding: 0;
+  }
+
   .temperature {
     text-align: center;
     margin: 0;
