--- a/weather.css
+++ b/weather.css
@@ -96,16 +96,14 @@ a {
   line-height: 1.3;
   text-align: center;
 }
-.project {
-  margin: 20px auto;
-  width: 700px;
-}
+
 .container {
+  margin: 30px auto;
   width: 700px;
   height: 450px;
   background: #e9ebee;
   border-radius: 20px;
-  margin: 0;
+
   padding: 0;
   font-family: "Poppins", sans-serif;
   line-height: 1;
@@ -189,12 +187,139 @@ a {
 For another screens
 !!!*/
 
-@media (min-width: 576px) {
+@media (max-width: 768px) {
   .container {
-    max-width: 100%;
+    width: 320px;
+    height: 568px;
+    background: #e9ebee;
+    border-radius: 20px;
+    margin: 0 auto;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    line-height: 1;
+  }
+  .project {
+    margin: 0 auto;
+    width: 320px;
+  }
+  .container-content {
+    padding: 25px 10px;
+  }
+  form {
+    margin: 0;
+    padding: 0;
+  }
+  input[type="text"] {
+    border-radius: 8px;
+    border: 1px solid #fff;
+    width: 300px;
+    height: 40px;
+    font-size: 18px;
+    padding: 5px;
+    margin: 0;
+    outline: none;
+  }
+
+  input::placeholder {
+    color: #a7a9ad;
+    font-size: 18px;
+  }
+  input[type="submit"] {
+    border-radius: 8px;
+    background-color: #ff934f;
+    border: 1px solid #ff934f;
+    width: 146px;
+    height: 40px;
+    font-size: 18px;
+    color: #ffffff;
+    margin: 8px 3px 0 0;
+    padding: 0;
+  }
+  button {
+    border-radius: 8px;
+    background-color: #5a6276;
+    border: 1px solid #5a6276;
+    width: 146px;
+    height: 40px;
+    font-size: 16px;
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+  }
+  .forecast-day {
+    color: #5a6276;
+    font-size: 16px;
+    text-align: center;
+  }
+  .col-2 {
+    margin: 0;
+    padding: 0;
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+  .col-2:last-child {
+    display: none;
+  }
+  .forecast-temp {
+    font-size: 16px;
+    text-align: center;
+  }
+  .col-2 img {
+    margin: 6px auto;
+    padding: 0;
+    display: block;
+    width: 40px;
+  }
+  .weather-details {
+    font-size: 16px;
+    font-weight: normal;
+    color: #5a6276;
+    margin: 0;
+    padding: 0;
+    line-height: 1.3;
+    text-align: center;
+  }
+  .top-img {
+    width: 80%;
+    margin: auto;
+    padding: 0;
+    display: block;
+  }
+  .col-6 {
+    margin: 0;
+    padding: 0;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .col-12 {
+    margin: 0;
+    padding: 0;
+  }
+
+  .temperature {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+  .row {
+    margin: 0;
+  }
+
+  h1 {
+    margin: 30px 0;
+    padding: 0;
+    font-size: 40px;
+  }
+
+  .middle {
+    padding: 0 0 50px;
+  }
+  .temp-number {
+    font-size: 76px;
   }
 }
-@media (max-width: 720px) {
+
+@media (max-width: 576px) {
   .container {
     width: 320px;
     height: 568px;
