--- a/weather.css
+++ b/weather.css
@@ -131,6 +131,7 @@ a {
   margin: auto;
   padding: 0;
   display: block;
+  width: 60%;
 }
 .middle {
   padding: 0 0 40px;
@@ -189,21 +190,18 @@ For another screens
 
 @media (max-width: 768px) {
   .container {
-    width: 320px;
-    height: 568px;
+    width: 60%;
+    height: 100%;
     background: #e9ebee;
     border-radius: 20px;
-    margin: 0 auto;
+    margin: 5% auto;
     padding: 0;
     font-family: "Poppins", sans-serif;
     line-height: 1;
   }
-  .project {
-    margin: 0 auto;
-    width: 320px;
-  }
+
   .container-content {
-    padding: 25px 10px;
+    padding: 8% 8%;
   }
   form {
     margin: 0;
@@ -212,10 +210,10 @@ For another screens
   input[type="text"] {
     border-radius: 8px;
     border: 1px solid #fff;
-    width: 300px;
+    width: 100%;
     height: 40px;
     font-size: 18px;
-    padding: 5px;
+    padding: 2%;
     margin: 0;
     outline: none;
   }
@@ -228,18 +226,18 @@ For another screens
     border-radius: 8px;
     background-color: #ff934f;
     border: 1px solid #ff934f;
-    width: 146px;
+    width: 49%;
     height: 40px;
     font-size: 18px;
     color: #ffffff;
-    margin: 8px 3px 0 0;
+    margin: 8px 0 0 0;
     padding: 0;
   }
   button {
     border-radius: 8px;
     background-color: #5a6276;
     border: 1px solid #5a6276;
-    width: 146px;
+    width: 49%;
     height: 40px;
     font-size: 16px;
     color: #ffffff;
@@ -248,7 +246,7 @@ For another screens
   }
   .forecast-day {
     color: #5a6276;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
   }
   .col-2 {
@@ -261,20 +259,20 @@ For another screens
     display: none;
   }
   .forecast-temp {
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
   }
   .col-2 img {
-    margin: 6px auto;
+    margin: 8% auto;
     padding: 0;
     display: block;
-    width: 40px;
+    width: 70%;
   }
   .weather-details {
     font-size: 16px;
     font-weight: normal;
     color: #5a6276;
-    margin: 0;
+    margin: auto;
     padding: 0;
     line-height: 1.3;
     text-align: center;
@@ -285,12 +283,7 @@ For another screens
     padding: 0;
     display: block;
   }
-  .col-6 {
-    margin: 0;
-    padding: 0;
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
+
   .col-12 {
     margin: 0;
     padding: 0;
@@ -298,7 +291,7 @@ For another screens
 
   .temperature {
     text-align: center;
-    margin: 0;
+    margin: 0 0 10%;
     padding: 0;
   }
   .row {
@@ -306,13 +299,13 @@ For another screens
   }
 
   h1 {
-    margin: 30px 0;
+    margin: 10% 0;
     padding: 0;
     font-size: 40px;
   }
 
   .middle {
-    padding: 0 0 50px;
+    padding: 0 0 15%;
   }
   .temp-number {
     font-size: 76px;
@@ -321,8 +314,8 @@ For another screens
 
 @media (max-width: 576px) {
   .container {
-    width: 320px;
-    height: 568px;
+    width: 90%;
+    height: 90%;
     background: #e9ebee;
     border-radius: 20px;
     margin: 0 auto;
@@ -330,12 +323,9 @@ For another screens
     font-family: "Poppins", sans-serif;
     line-height: 1;
   }
-  .project {
-    margin: 0 auto;
-    width: 320px;
-  }
+
   .container-content {
-    padding: 25px 10px;
+    padding: 5% 5%;
   }
   form {
     margin: 0;
@@ -344,7 +334,7 @@ For another screens
   input[type="text"] {
     border-radius: 8px;
     border: 1px solid #fff;
-    width: 300px;
+    width: 100%;
     height: 40px;
     font-size: 18px;
     padding: 5px;
@@ -360,18 +350,18 @@ For another screens
     border-radius: 8px;
     background-color: #ff934f;
     border: 1px solid #ff934f;
-    width: 146px;
+    width: 49%;
     height: 40px;
     font-size: 18px;
     color: #ffffff;
-    margin: 8px 3px 0 0;
+    margin: 8px 0 0 0;
     padding: 0;
   }
   button {
     border-radius: 8px;
     background-color: #5a6276;
     border: 1px solid #5a6276;
-    width: 146px;
+    width: 49%;
     height: 40px;
     font-size: 16px;
     color: #ffffff;
@@ -406,25 +396,22 @@ For another screens
     font-size: 16px;
     font-weight: normal;
     color: #5a6276;
-    margin: 0;
+    margin: auto;
     padding: 0;
     line-height: 1.3;
     text-align: center;
+    vertical-align: middle;
+    display: inline;
   }
   .top-img {
-    width: 80%;
+    width: 70%;
     margin: auto;
     padding: 0;
     display: block;
   }
-  .col-6 {
-    margin: 0;
-    padding: 0;
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
+
   .col-12 {
-    margin: 0;
+    margin: 0 0 5%;
     padding: 0;
   }
 
@@ -438,13 +425,13 @@ For another screens
   }
 
   h1 {
-    margin: 30px 0;
+    margin: 5% 0;
     padding: 0;
     font-size: 40px;
   }
 
   .middle {
-    padding: 0 0 50px;
+    padding: 0 0 10%;
   }
   .temp-number {
     font-size: 76px;
