--- a/weather.css
+++ b/weather.css
@@ -420,6 +420,9 @@ For another screens
     margin: 0;
     padding: 0;
   }
+  .temp-cf {
+    font-size: 20px;
+  }
   .row {
     margin: 0;
   }
